@@ -56,6 +56,7 @@
 - fix add simple bind auth.
 - add option to dump configured automount maps.
 - use weight only for server selection.
+- fix isspace() wild card substition.
 
 03/09/2009 autofs-5.0.5
 -----------------------
